--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
+
+<head>
     <meta charset='utf-8'>
+    <title>Moji Tavoni</title>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-  </head>
-  <body>
+</head>
 
-  </body>
+<body>
+    <h1>Hello, Code School!</h1>
+    <ul>
+        <li>PHP</li>
+        <li>Laravel</li>
+        <li>SQL</li>
+        <li>...</li>
+    </ul>
+
+</body>
+
 </html>
